correct modal align, margin and padding

--- a/src/styles/scss/scss/_modal.scss
+++ b/src/styles/scss/scss/_modal.scss
@@ -16,21 +16,24 @@
   top: 0;
   left: 0;
   z-index: 1055;
-  display: none;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: #212529!important;
   transition: opacity .15s linear;
-  margin: 1rem;
+  margin: 0rem;
+  padding: 1rem;
+  color: white;
+  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+  display: none;
+  height: 100%;
+  left: 0;
+  outline: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
 
-  @media (min-width: 576px){
-    .modal {
-    margin: 4rem;
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
-    }
-}
   // Prevent Chrome on Windows from adding a focus outline. For details, see
   // https://github.com/twbs/bootstrap/pull/10951.
   outline: 0;
@@ -38,6 +41,8 @@
   // gnarly iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
   // See also https://github.com/twbs/bootstrap/issues/17695
 }
+
+
 
 .text-6 {
   font-size: 24px!important;
@@ -87,13 +92,12 @@ html:not([dir=rtl]) .social-icons li:first-child {
 
 
 // Shell div to position the modal with bottom padding
-.modal-dialog {
-  position: relative;
-  width: auto;
-  margin: 6.75rem auto;;
-  // allow clicks to pass through for custom click handling to close modal
-  pointer-events: none;
 
+.modal-body {
+  flex: 1 1 auto;
+  padding: var(--bs-modal-padding);
+  position: relative;
+}
 
 
 .slick-list {
@@ -118,6 +122,49 @@ html:not([dir=rtl]) .social-icons li:first-child {
   transform: translateZ(0);
 }
 
+.slick-track {
+  display: block;
+  left: 0;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 0;
+  opacity: 1;
+  transform: translate3d(-621px, 0px, 0px);
+
+  &::before, &::after {
+      content: "";
+      display: table;
+      box-sizing: border-box;
+  }
+  
+
+}
+
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-slide {
+  padding: 0 12px;
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+}
+
+.slick-slide img {
+  display: block;
+}
+.img-fluid, .img-thumbnail {
+  height: auto;
+  max-width: 100%;
+}
+img {
+  vertical-align: inherit;
+}
+
 .slick-dots {
   margin-top: 10px;
   position: static;
@@ -128,6 +175,7 @@ html:not([dir=rtl]) .social-icons li:first-child {
   text-align: center;
   width: 100%;
 }
+
 
 
 .slick-dots li {
@@ -165,7 +213,7 @@ html:not([dir=rtl]) .social-icons li:first-child {
     border-color: $px-theme;
     transition: all .5s ease;
 
-    &:before {
+    &::before {
       border-radius: 100%;
       content: "";
       height: 10px;
@@ -187,10 +235,21 @@ html:not([dir=rtl]) .social-icons li:first-child {
   }
 }
 
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  // allow clicks to pass through for custom click handling to close modal
+  pointer-events: none;
+  max-width: 90%;
+  padding: 4rem;
+
+
   // When fading in the modal, animate it to slide down
   .modal.fade & {
-    transition: (transform .3s ease-out);
-    transform: translate(0, -50px);
+    @include transition($modal-transition);
+    transform: $modal-fade-transform;
   }
   .modal.show & {
     transform: $modal-show-transform;
@@ -201,6 +260,7 @@ html:not([dir=rtl]) .social-icons li:first-child {
     transform: $modal-scale-transform;
   }
 }
+
 
 .modal-dialog-scrollable {
   height: calc(100% - var(modal-margin) * 2);
@@ -228,9 +288,9 @@ html:not([dir=rtl]) .social-icons li:first-child {
   flex-direction: column;
   width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog`
   // counteract the pointer-events: none; in the .modal-dialog
-  color: var(--#{$prefix}modal-color);
+  color: $px-dark;
   pointer-events: auto;
-  background-color: var(--#{$prefix}modal-bg);
+  background-color: white;
   background-clip: padding-box;
   border: var(--#{$prefix}modal-border-width) solid var(--#{$prefix}modal-border-color);
   border-radius: (var(--#{$prefix}modal-border-radius));
@@ -241,10 +301,24 @@ html:not([dir=rtl]) .social-icons li:first-child {
 
 // Modal background
 .modal-backdrop {
+  --bs-backdrop-zindex: 1050;
+  --bs-backdrop-bg: #000;
+  --bs-backdrop-opacity: 0.5;
+  background-color: var(--bs-backdrop-bg);
+  height: 100vh;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  z-index: var(--bs-backdrop-zindex);
   // scss-docs-start modal-backdrop-css-vars
-  --#{$prefix}backdrop-zindex: #{$zindex-modal-backdrop};
-  --#{$prefix}backdrop-bg: #{$modal-backdrop-bg};
-  --#{$prefix}backdrop-opacity: #{$modal-backdrop-opacity};
+  &.show {
+    opacity: var(--bs-backdrop-opacity);
+  }
+  &.fade {
+      opacity: 0;
+    transition: opacity .15s linear;
+  }
   // scss-docs-end modal-backdrop-css-vars
 
   $overlay-backdrop: (var(--#{$prefix}backdrop-zindex), var(--#{$prefix}backdrop-bg), var(--#{$prefix}backdrop-opacity));
@@ -268,7 +342,6 @@ html:not([dir=rtl]) .social-icons li:first-child {
 }
 
 .btn-close {
-  background: transparent;
   border: 0;
   border-radius: 0.375rem;
   box-sizing: initial;
@@ -277,6 +350,14 @@ html:not([dir=rtl]) .social-icons li:first-child {
   opacity: .5;
   padding: 0.25em;
   width: 1em;
+  background: transparent url('http://www.w3.org/2000/svg') viewBox='0 0 16 16' auto no-repeat;
+
+  &:hover {
+    color: #000;
+    opacity: .75;
+    text-decoration: none;
+}
+
 }
 
 // Title text within header
@@ -325,6 +406,7 @@ html:not([dir=rtl]) .social-icons li:first-child {
   // Automatically set modal's width for larger viewports
   .modal-dialog {
     max-width: 90%;
+    width: auto;
     margin: 7.75rem;
     ;
   }
@@ -334,12 +416,24 @@ html:not([dir=rtl]) .social-icons li:first-child {
   }
 }
 
-media-breakpoint-up-lg {
-  .modal-lg,
-  .modal-xl {
-    width: #{$modal-lg};
+
+
+.modal-xl {
+  width: 90%;
+
+  @media (min-width: 1200px) {
+    .modal-xl {
+  width: 1140px;
   }
 }
+
+@media (min-width: 992px){
+    .modal-xl {
+  width: 800px;
+  }
+  }
+}
+
 
 .media-breakpoint-up-xl {
   .modal-xl {
